# rust-ecommerce

./: .gitignore  Cargo.toml  README.md  sea-orm-cli.toml
migration/src/: m20241205_041115_create_users_table.rs
src/: main.rs  mod.rs
src/config/: db.rs
src/controllers/: user.rs
src/models/: user.rs
src/routes/: user_routes.rs
src/schemas/: user_schema.rs
src/services/: user_service.rs
