[package]
name = "rust-ecommerce"
version = "0.1.0"
edition = "2021"

[dependencies]

# Web framework
actix-web = "4.0"

# ORM
sea-orm = { version = "1.1.2", features = ["postgresql", "runtime-tokio-native-tls"] }
sea-orm-migration = "1.1.2"

# Validation
validator = "0.19.0" 

# Async Runtime
tokio = { version = "1", features = ["full"] }

# Utility
serde = { version = "1.0", features = ["derive"] } 
serde_json = "1.0"
dotenv = "0.15"
bcrypt = "0.16.0"
uuid = { version = "1.0", features = ["v4"] }  # Unique IDs

# Date and Time
chrono = "0.4"

